--- a/app.json
+++ b/app.json
@@ -2,38 +2,47 @@
   "expo": {
     "name": "PAPMU",
     "slug": "PAPMU",
-    "version": "1.0.0",
+    "version": "1.0.0",                // Semantic version for users (major.minor.patch)
     "orientation": "portrait",
     "icon": "./assets/images/logo_PAPMU.png",
     "scheme": "papmu",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+
     "android": {
+      "package": "com.azlan.papmu", // 👈 unique Android package name
+      "versionCode": 1,                // 👈 increment by 1 for every Play Store update
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/logo_PAPMU.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
     },
+
     "ios": {
+      "bundleIdentifier": "com.azlan.papmu", // 👈 unique iOS bundle ID
+      "buildNumber": "1.0.0",                   // 👈 increment for every App Store update
       "supportsTablet": true
     },
+
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/logo_PAPMU.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+
+    "plugins": ["expo-router"],
+
     "experiments": {
       "typedRoutes": true
     },
+
     "extra": {
       "router": {},
       "eas": {
